# proc-macro-workshop

builder/: Cargo.toml
builder/src/: derive.rs  lib.rs
builder/src/derive/: utils.rs
debug/: Cargo.toml
debug/src/: lib.rs
